# tren-crc

./: .gitignore  CHANGELOG.md  COMMIT_RULE.md  Cargo.toml  README.md  env.sh
.githooks/: commit-msg  pre-commit
.github/: CI_PENDING.md  pull_request_template.md
.github/workflows/: ci.yml
docs/research/: diagonal_entropy.md  diagonal_entropy_data.tsv  diagonal_entropy_raw.txt  even_bit_detection.md  even_bit_raw.txt  simd_branchless_crc.md  simd_branchless_crc_raw.txt
examples/: bench_crc_impls.rs  exp_diagonal_entropy.rs  exp_even_bit.rs
src/: lib.rs  priority.rs
src/research/: bench.rs  bool_ops.rs  crc_impls.rs  data.rs  entropy_sweep.rs  inject.rs  mod.rs  parity_layer.rs  scatter.rs  stats.rs
tests/: crc_detect.rs  crc_impls_consistency.rs  research_harness.rs  smoke.rs
